<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="accessibility_switch_to_camera">Normal mode</string>
    <string name="accessibility_switch_to_face_beauty">Face beauty mode</string>
    <string name="accessibility_switch_to_dual_camera">Dual camera mode</string>
    <string name="accessibility_switch_to_pip">PIP mode</string>
    <string name="accessibility_switch_to_panorama">Panorama mode</string>
    <string name="pref_camera_record_location_title">Location info</string>
    <string name="pref_camera_recordlocation_default" translatable="false">on</string>
    <string name="pref_camera_recordlocation_entry_off" translatable="false">Off</string>
    <string name="pref_camera_recordlocation_entry_on" translatable="false">On</string>
    <string name="pref_camera_koobeewatermark_default" translatable="false">on</string>
    <string name="pref_camera_koobeewatermark_entry_off" translatable="false">Off</string>
    <string name="pref_camera_koobeewatermark_entry_on" translatable="false">On</string>
    <string name="pref_face_beauty_mode_default" translatable="false">Single</string>
    <string name="pref_face_beauty_mode_single_face_mode">Single face mode</string>
    <string name="pref_face_beauty_mode_multi_face_mode">Multi-face mode</string>
    <string name="pref_face_beauty_mode_off">Off</string>
    <string name="face_beauty_single_mode" translatable="false">Single</string>
    <string name="face_beauty_multi_mode" translatable="false">Multi</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_camera_exposure_default" translatable="false">0</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_default" translatable="false">auto</string>
    <string name="pref_camera_scenemode_entry_auto">Auto</string>
    <string name="pref_camera_scenemode_entry_normal">Normal</string>
    <string name="pref_camera_scenemode_entry_action">Action</string>
    <string name="pref_camera_scenemode_entry_night">Night</string>
    <string name="pref_camera_scenemode_entry_sunset">Sunset</string>
    <string name="pref_camera_scenemode_entry_party">Party</string>
    <string name="pref_camera_scenemode_entry_portrait">Portrait</string>
    <string name="pref_camera_scenemode_entry_landscape">Landscape</string>
    <string name="pref_camera_scenemode_entry_night_portrait">Night portrait</string>
    <string name="pref_camera_scenemode_entry_theatre">Theatre</string>
    <string name="pref_camera_scenemode_entry_beach">Beach</string>
    <string name="pref_camera_scenemode_entry_snow">Snow</string>
    <string name="pref_camera_scenemode_entry_steadyphoto">Steady photo</string>
    <string name="pref_camera_scenemode_entry_fireworks">Fireworks</string>
    <string name="pref_camera_scenemode_entry_sports">Sports</string>
    <string name="pref_camera_scenemode_entry_candlelight">Candle light</string>
    <string name="pref_camera_coloreffect_title">Color effect</string>
    <string name="pref_camera_coloreffect_default" translatable="false">none</string>
    <string name="pref_camera_coloreffect_entry_none">None</string>
    <string name="pref_camera_coloreffect_entry_mono">Mono</string>
    <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
    <string name="pref_camera_coloreffect_entry_negative">Negative</string>
    <string name="pref_camera_coloreffect_entry_solarize">Solarize</string>
    <string name="pref_camera_coloreffect_entry_posterize">Posterize</string>
    <string name="pref_camera_coloreffect_entry_whiteboard">Whiteboard</string>
    <string name="pref_camera_coloreffect_entry_blackboard">Blackboard</string>
    <string name="pref_camera_coloreffect_entry_aqua">Aqua</string>
    <string name="pref_camera_coloreffect_entry_pastel">Pastel</string>
    <string name="pref_camera_coloreffect_entry_mosaic">Mosaic</string>
    <string name="pref_camera_coloreffect_entry_redtint">Red tint</string>
    <string name="pref_camera_coloreffect_entry_bluetint">Blue tint</string>
    <string name="pref_camera_coloreffect_entry_greentint">Green tint</string>
    <string name="pref_camera_coloreffect_entry_sepiablue">Sepia Blue</string>
    <string name="pref_camera_coloreffect_entry_sepiagreen">Sepia Green</string>
    <string name="pref_camera_coloreffect_entry_nashville">Fresh</string>
    <string name="pref_camera_coloreffect_entry_hefe">Movie</string>
    <string name="pref_camera_coloreffect_entry_valencia">Calm</string>
    <string name="pref_camera_coloreffect_entry_xproll">Memory</string>
    <string name="pref_camera_coloreffect_entry_lofi">Gorgeous</string>
    <string name="pref_camera_coloreffect_entry_sierra">Elegant</string>
    <string name="pref_camera_coloreffect_entry_walden">Cool</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_whitebalance_entry_twilight">Twilight</string>
    <string name="pref_camera_whitebalance_entry_shade">Shade</string>
    <string name="pref_camera_whitebalance_entry_warm_fluorescent">Warm fluorescent</string>
    <string name="pref_camera_whitebalance_entry_tungsten">Tungsten</string>
    <string name="pref_camera_image_properties_default">Default</string>
    <string name="pref_camera_image_properties_title">Image properties</string>
    <string name="pref_camera_edge_default" translatable="false">middle</string>
    <string name="pref_camera_edge_title">Sharpness</string>
    <string name="pref_camera_hue_default" translatable="false">middle</string>
    <string name="pref_camera_hue_title">Hue</string>
    <string name="pref_camera_saturation_default" translatable="false">middle</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_brightness_default" translatable="false">middle</string>
    <string name="pref_camera_brightness_title">Brightness</string>
    <string name="pref_camera_contrast_default" translatable="false">middle</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_dip_entry_low">Low</string>
    <string name="pref_camera_dip_entry_middle">Medium</string>
    <string name="pref_camera_dip_entry_high">High</string>
    <string name="pref_camera_antibanding_title">Anti-flicker</string>
    <string name="pref_camera_antibanding_default" translatable="false">auto</string>
    <string name="pref_camera_antibanding_entry_auto">Auto</string>
    <string name="pref_camera_antibanding_entry_off">Off</string>
    <string name="pref_camera_antibanding_entry_50hz">50Hz</string>
    <string name="pref_camera_antibanding_entry_60hz">60Hz</string>
    <string name="pref_camera_zsd_title">Zero shutter delay</string>
    <string name="pref_camera_zsd_default" translatable="false">on</string>
    <string name="pref_camera_zsd_entry_off" translatable="false">Off</string>
    <string name="pref_camera_zsd_entry_on" translatable="false">On</string>
    <string name="pref_camera_ais_title">Anti-shake</string>
    <string name="pref_camera_ais_default" translatable="false">off</string>
    <string name="pref_camera_ais_on" translatable="false">ais</string>
    <string name="pref_camera_ais_off" translatable="false">off</string>
    <string name="pref_voice_capture">Voice capture</string>
    <string name="pref_voice_default" translatable="false">off</string>
    <string name="pref_voice_entry_off" translatable="false">Off</string>
    <string name="pref_voice_entry_on" translatable="false">On</string>
    <string name="pref_camera_face_detect_title">Face detection</string>
    <string name="pref_camera_face_detect_default" translatable="false">on</string>
    <string name="pref_camera_face_detect_entry_off" translatable="false">Off</string>
    <string name="pref_camera_face_detect_entry_on" translatable="false">On</string>
    <string name="pref_gesture_shot_title">Gesture Shot</string>
    <string name="pref_gesture_shot_default" translatable="false">off</string>
    <string name="pref_gesture_shot_entry_off" translatable="false">Off</string>
    <string name="pref_gesture_shot_entry_on" translatable="false">On</string>
    <string name="pref_smile_shot_title">Smile shot</string>
    <string name="pref_smile_shot_default" translatable="false">off</string>
    <string name="pref_smile_shot_entry_off" translatable="false">Off</string>
    <string name="pref_smile_shot_entry_on" translatable="false">On</string>
    <string name="pref_asd_title">Auto scene detection</string>
    <string name="pref_asd_default" translatable="false">off</string>
    <string name="pref_asd_entry_off" translatable="false">Off</string>
    <string name="pref_asd_entry_on" translatable="false">On</string>
    <string name="pref_dng_title" translatable="false">RAW(.DNG)</string>
    <string name="pref_dng_default" translatable="false">off</string>
    <string name="pref_dng_entry_off" translatable="false">Off</string>
    <string name="pref_dng_entry_on" translatable="false">On</string>
    <string name="pref_camera_hdr_title">HDR</string>
    <string name="pref_camera_hdr_default" translatable="false">off</string>
    <string name="pref_camera_hdr_entry_off" translatable="false">Off</string>
    <string name="pref_camera_hdr_entry_on" translatable="false">On</string>
    <string name="pref_camera_selftimer_title">Self timer</string>
    <string name="pref_camera_selftimer_default" translatable="false">0</string>
    <string name="pref_camera_selftimer_entry_off">Off</string>
    <string name="pref_camera_selftimer_entry_2">2 seconds</string>
    <string name="pref_camera_selftimer_entry_10">10 seconds</string>
    <string name="pref_camera_continuous_number_title">Capture number</string>
    <string name="pref_camera_continuous_number_default" translatable="false">20</string>
    <string name="pref_camera_continuous_number_normal">20 shots</string>
    <string name="pref_camera_continuous_number_large">40 shots</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_default" translatable="false">4608x3456</string>
    <string name="pref_camera_picturesize_entry_5120x3840">4:3 20M</string>
    <string name="pref_camera_picturesize_entry_4608x3456">4:3 16M</string>
    <string name="pref_camera_picturesize_entry_4656x3496">4:3 16M</string>
    <string name="pref_camera_picturesize_entry_5120x2880">16:9 15M</string>
    <string name="pref_camera_picturesize_entry_4160x3120">4:3 13M</string>
    <string name="pref_camera_picturesize_entry_4096x3072">4:3 12M</string>
    <string name="pref_camera_picturesize_entry_4608x2592">16:9 12M</string>
    <string name="pref_camera_coloreffect_portrait_entry_monochromatic_light">monochromatic light</string>
    <string name="pref_camera_coloreffect_portrait_entry_natural_light">natural light</string>
    <string name="pref_camera_coloreffect_portrait_entry_studio_light">studio light</string>
    <string name="pref_camera_coloreffect_portrait_entry_contour_light">contour light</string>
    <string name="pref_camera_coloreffect_portrait_entry_stage_light">stage light</string>
    <string name="shortcut_title_superzoom">SuperZoom</string>
    <string name="shortcut_title_portrait">Portrait</string>
    <string name="shortcut_title_video">Video</string>
    <string name="shortcut_title_facebeauty">Facebeauty</string>
</resources>